
[TestSetWorkspaces/set_workspaces_with_invalid_json - 1]
sway-setter workspaces --print <<EOF
{
  "id": 1,
  "name": "1",
  "output": "HDMI-A-0",
  "focused": true
}
EOF
Error: Error: failed to parse input content
Hint: make sure to use a file generated by the `swaymsg -t get_workspaces` output
Usage:
  sway-setter workspaces <stdin> [flags]

Flags:
  -h, --help    help for workspaces
  -p, --print   Prints commands that would be executed. Can be used as input to swaymsg

exit status 1

---

[TestSetWorkspaces/set_workspaces_with_incomplete_json - 1]
sway-setter workspaces --print <<EOF
{"id":1,"name":"1"
EOF
Error: Error: failed to parse input content
Hint: make sure to use a file generated by the `swaymsg -t get_workspaces` output
Usage:
  sway-setter workspaces <stdin> [flags]

Flags:
  -h, --help    help for workspaces
  -p, --print   Prints commands that would be executed. Can be used as input to swaymsg

exit status 1

---

[TestSetWorkspaces/set_workspaces_one_workspace - 1]
sway-setter workspaces --print <<EOF
[
  {
    "id": 1,
    "name": "1",
    "output": "HDMI-A-0",
    "focused": true
  }
]
EOF
workspace 1; move workspace to output HDMI-A-0
workspace 1

---

[TestSetWorkspaces/set_workspaces_with_multiple_workspaces - 1]
sway-setter workspaces --print <<EOF
[
  {
    "id": 1,
    "name": "1",
    "output": "HDMI-A-0",
    "focused": false
  },
  {
    "id": 2,
    "name": "2",
    "output": "DP-1",
    "focused": true
  },
  {
    "id": 3,
    "name": "3",
    "output": "eDP-1",
    "focused": false
  }
]
EOF
workspace 1; move workspace to output HDMI-A-0
workspace 2; move workspace to output DP-1
workspace 3; move workspace to output eDP-1
workspace 2

---
